到底有哪些操作在Java规范中是不保证原子性的呢？
到底有哪些操作在Java规范中是不保证原子性的呢？